Assignment 2 refactor to html5

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
       <title>Bloc Jams</title>
     </head>
     <body>
-      <div> <!-- navigation bar -->
-      </div>
-      <div> <!-- hero content -->
+      <nav> <!-- navigation bar -->
+      </nav>
+      <section> <!-- hero content -->
         <h1>Bloc Jams</h1>
         <h3>Turn the music up!</h3>
-      </div>
+      </section>
       <div> <!-- selling points -->
         <div>
             <h5>Choose your music</h5>
