--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>Bloc Jams</h1>
         <h3>Turn the music up!</h3>
       </section>
-      <div> <!-- selling points -->
+      <section> <!-- selling points -->
         <div>
             <h5>Choose your music</h5>
             <p>The world is full of music; why should you have to listen to music that someone else chose?</p>
@@ -23,6 +23,6 @@
             <h5>Mobile enabled</h5>
             <p>Listen to your music on the go. This streaming service is available on all mobile platforms.</p>
         </div>
-      </div>
+      </section>
     </body>
 </html>
