--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
 
       </section>
-
+      <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
       <script src="scripts/landing.js"></script>
 
     </body>
